--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,25 +7,53 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
     <title>Login</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
 </head>
-<body>
-<div id="central">
-<span th:if="${error}">Erro ao logar, tente novamente.</span>
-<form method="POST" th:action="@{/login}">
-    <p>
-        <label for="cpf">CPF:</label>
-        <input id="cpf" name="cpf" type="text">
-    </p>
-    <p>
-        <label for="senha">Senha:</label>
-        <input id="senha" name="senha" type="password">
-    </p>
+<body style="background-color: #112255;">
+<div>
+    <section class="h-100 gradient-form">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-xl-6">
+                    <div class="card rounded-3 text-black">
+                        <div class="row g-0">
+                            <div class="col-lg-12">
+                                <div class="card-body text-center">
+                                    <h4 class="mt-1 mb-5 pb-1">Sistema Gerenciador de Consultório Odontológico</h4>
+                                    <span th:if="${error}">Erro ao logar, tente novamente.</span>
+                                    <form method="POST" th:action="@{/login}">
+                                        <!-- Email input -->
+                                        <div class="form-outline text-left mb-4">
+                                            <label class="form-label" for="cpf">CPF:</label>
+                                            <input class="form-control" id="cpf" name="cpf" type="text"/>
+                                        </div>
 
-    <p>
-        <input type="submit" value="Entrar"/>
-    </p>
-</form>
-<span>Não possui um cadastro? <a href="/cadastro/paciente">Registre-se</a></span>
+                                        <!-- Password input -->
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label text-left" for="senha">Senha:</label>
+                                            <input class="form-control" id="senha" name="senha" type="password">
+                                        </div>
+
+                                        <div class="row mb-4">
+                                            <div class="col">
+                                                <span>Não possui um cadastro? <a
+                                                        href="/cadastro/paciente">Registre-se</a></span>
+                                            </div>
+                                        </div>
+                                        <div class="align-items-right">
+                                            <input class="btn btn-primary btn-block mb-4" type="submit" value="Entrar"/>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    </form>
 </div>
 </body>
 </html>
